<resources>
    <string name="app_name">Kroko</string>
    <string name="agora_app_id">396c1f53b57649f59bc2413026411a2c</string>
    <string name="test_channel_token">00658ac8d6313be490b9fb08fa70cce9f60IABmwXvFJ+3tltYP3CTiDFwvEtmvBQ0gRKPI2Ndyl8/hoo9auH4AAAAAEADwRtPADOSmXgEAAQAM5KZe</string>
    
    <string name="find_opponents">искать соперников!</string>
    <string name="join_by_link">Присоединиться по ссылке</string>
    <string name="enter_lobby">войти</string>

    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="desc_kroko_lockup">Firebase logo and name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="profile">Профиль</string>
    <string name="games_played">Игр сыграно</string>
    <string name="wins">Побед</string>
    <string name="loses">Поражений</string>
    <string name="points_counter">Очков</string>
    <string name="added">added</string>
    <string name="modified">modified</string>
    <string name="removed">removed</string>
    <string name="create_lobby">Создание Лобби</string>
    <string name="enter_lobby_name">Введите название лобби</string>
    <string name="create">Создать</string>
</resources>
