<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.KrokoIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_kroko_lockup"
            android:src="@drawable/kroko_lockup"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailPasswordFields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/emailCreateAccountButton"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

        <!--        <LinearLayout-->
        <!--            android:id="@+id/signedInButtons"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:paddingLeft="16dp"-->
        <!--            android:paddingRight="16dp"-->
        <!--            android:visibility="gone">-->

        <!--            <Button-->
        <!--                android:id="@+id/signOutButton"-->
        <!--                android:layout_marginStart="@dimen/button_horizontal_margin"-->
        <!--                android:layout_marginEnd="@dimen/button_horizontal_margin"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/sign_out"-->
        <!--                android:theme="@style/ThemeOverlay.MyDarkButton" />-->

        <!--            <Button-->
        <!--                android:id="@+id/verifyEmailButton"-->
        <!--                android:layout_marginStart="@dimen/button_horizontal_margin"-->
        <!--                android:layout_marginEnd="@dimen/button_horizontal_margin"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/verify_email"-->
        <!--                android:theme="@style/ThemeOverlay.MyDarkButton" />-->

        <!--            <Button-->
        <!--                android:id="@+id/reloadButton"-->
        <!--                style="@style/Widget.AppCompat.Button.Colored"-->
        <!--                android:layout_marginStart="@dimen/button_horizontal_margin"-->
        <!--                android:layout_marginEnd="@dimen/button_horizontal_margin"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/reload"-->
        <!--                android:theme="@style/ThemeOverlay.MyDarkButton" />-->
        <!--        </LinearLayout>-->
    </RelativeLayout>
</LinearLayout>